--- a/generators/app/templates/.virtual-beans/config.json
+++ b/generators/app/templates/.virtual-beans/config.json
@@ -3,5 +3,6 @@
     "connection-pool-name": "<%= connectionPoolName %>",
     "database-name": "<%= databaseName %>",
     "database-username": "<%= databaseUserName %>",
-    "database-password": "<%= databasePassword %>"
+    "database-password": "<%= databasePassword %>",
+    "project-name": "<%= projectName %>"
 }
