update tutorial and database configuration

--- a/generators/app/templates/.virtual-beans/config.json
+++ b/generators/app/templates/.virtual-beans/config.json
@@ -4,5 +4,7 @@
     "database-name": "<%= databaseName %>",
     "database-username": "<%= databaseUserName %>",
     "database-password": "<%= databasePassword %>",
-    "project-name": "<%= projectName %>"
+    "project-name": "<%= projectName %>",
+    "auto-deploy": <%= autoDeploy %>,
+    "drop-table-on-deploy": <%= dropDatabaseOnDeploy %>
 }
