--- a/generators/app/templates/mainproject/mainproject-ejb/build.gradle
+++ b/generators/app/templates/mainproject/mainproject-ejb/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'javax.ejb:ejb-api:3.0'
     implementation 'javax.persistence:persistence-api:1.0.2'
     implementation 'javax.json:javax.json-api:1.1.4'
+    implementation 'javax.jms:javax.jms-api:2.0.1'
     compile project(":<%= projectName %>Interface")
 }
 
