--- a/generators/app/templates/mainproject/mainproject-war/build.gradle
+++ b/generators/app/templates/mainproject/mainproject-war/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'javax.persistence:persistence-api:1.0.2'
     implementation 'javax.faces:javax.faces-api:2.3-pfd'
     implementation 'javax.json:javax.json-api:1.1.4'
+    implementation 'javax.jms:javax.jms-api:2.0.1'
     compile group: 'org.glassfish', name: 'javax.servlet', version: '3.2-b06'
     compile project(":<%= projectName %>:<%= projectName %>-ejb")
 }
