--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-netbeans-gradle",
-  "version": "0.0.0",
-  "description": "creates generator for setting up virtual beans project",
+  "version": "0.0.1",
+  "description": "Creates generator for setting up virtual beans project",
   "homepage": "",
   "author": {
     "name": "zhangbsn",
