update for intelliSence

--- a/generators/app/templates/appclient/build.gradle
+++ b/generators/app/templates/appclient/build.gradle
@@ -40,7 +40,7 @@ repositories {
 sourceSets {
     main {
          java {
-            srcDirs = ['src']
+            srcDirs = ['src/java']
          }
     }
 }
